# next_v2

./: 32_linux_i686.toolchain.cmake  CMakeLists.txt  README.md  ReadMe.md  bootninja-x86_64.sh  bootstrap  bootstrap-openwrt-arm64.sh  bootstrap-x86_64.sh  bootstrap.sh  build.sh  clean.sh  cmd_debug.sh  debug.sh  distclean.sh  do_debug.sh  do_release.sh  gui_debug.sh  linkresource.sh  meLa.pro  meLa.sln  memcheck.sh  n2draw.pro  n2draw.sln  n2draw_12.sln  n2resource.sh  ninja.sh  prepare.sh  rebuild.sh  release.sh  target_debug.sh  test
bmpImage/: CMakeLists.txt  bmpImageStatic.vcxproj  bmpImageStatic.vcxproj.filters
bmpImage/header/: images.h
bmpImage/inc/: images.h
bmpImage/project/qt/: image.pro
bmpImage/source/: images.cpp
bmpImage/src/: images.cpp
cdump/: CMakeLists.txt
cdump/src/: main.c
fontimport/project/: Courier_10_14.xml  Courier_10_14_B.xml  fontimport.vcxproj  fontimport.vcxproj.filters
fontimport/source/: main.cpp
images/: conf.xml
meLaSDL/: CMakeLists.txt
meLaSDL/src/: main.cpp
meLaWin32/header/: Resource.h
meLaWin32/project/: meLaWin32.vcxproj  meLaWin32.vcxproj.filters
meLaWin32/resource/: meLaWin32.rc
meLaWin32/source/: meLaWin32.cpp
meLadder/header/: mainwindow.h  mdichild.h  mdiselector.h
meLadder/project/qt/: meLadder.pro
meLadder/resource/: mela.qrc
meLadder/source/: main.cpp  mainwindow.cpp  mdichild.cpp  mdiselector.cpp
n2bmpimage/: CMakeLists.txt
n2bmpimage/src/: images.cpp
n2draw/: CMakeLists.txt
n2draw/header/: MerlinoVCPU.h  miniXml.h  n2appmanager.h  n2caption.h  n2capturepos.h  n2childapp.h  n2commander.h  n2connection.h  n2draw.h  n2drawmanager.h  n2exception.h  n2exthandler.h  n2fontlist.h  n2fontmanager.h  n2iface.h  n2imagemanager.h  n2interfaces.h  n2logger.h  n2miniXml.h  n2moreinfo.h  n2point.h  n2resource.h  n2scroller.h  n2selector.h  n2toolview.h  n2utils.h  n2utoatou.h  n2view.h  n2viewglue.h  viewglue.h
n2draw/inc/: MerlinoVCPU.h  n2appmanager.h  n2caption.h  n2capturepos.h  n2childapp.h  n2commander.h  n2connection.h  n2draw.h  n2drawmanager.h  n2exception.h  n2exthandler.h  n2fontlist.h  n2fontmanager.h  n2imagemanager.h  n2interfaces.h  n2miniXml.h  n2moreinfo.h  n2point.h  n2resource.h  n2scroller.h  n2selector.h  n2toolview.h  n2utils.h  n2utoatou.h  n2view.h  n2viewglue.h
n2draw/project/: n2draw.vcxproj  n2draw.vcxproj.filters  n2draw_12.vcxproj  n2draw_12.vcxproj.filters
n2draw/project/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
n2draw/project/qt/: n2draw.pro
n2draw/source/: miniXml.cpp  n2appmanager.cpp  n2caption.cpp  n2capturepos.cpp  n2childapp.cpp  n2commander.cpp  n2connection.cpp  n2draw.cpp  n2drawmanager.cpp  n2exthandler.cpp  n2fontManager.cpp  n2fontlist.cpp  n2fontmanager.cpp  n2iface.cpp  n2imagemanager.cpp  n2logger.cpp  n2miniXml.cpp  n2moreinfo.cpp  n2resource.cpp  n2scroller.cpp  n2selector.cpp  n2toolview.cpp  n2utils.cpp  n2view.cpp  n2viewglue.cpp  viewglue.cpp
n2draw/src/: n2appmanager.cpp  n2caption.cpp  n2capturepos.cpp  n2childapp.cpp  n2commander.cpp  n2connection.cpp  n2draw.cpp  n2drawmanager.cpp  n2exthandler.cpp  n2fontlist.cpp  n2fontmanager.cpp  n2iface.cpp  n2imagemanager.cpp  n2miniXml.cpp  n2moreinfo.cpp  n2resource.cpp  n2scroller.cpp  n2selector.cpp  n2toolview.cpp  n2utils.cpp  n2view.cpp  n2viewglue.cpp
n2logger/: CMakeLists.txt
n2logger/header/: n2logger.h  n2logiface.h
n2logger/inc/: n2logger.h  n2logiface.h  n2statistics.h
n2logger/source/: n2logger.cpp
n2logger/src/: n2logger.cpp  n2statistics.cpp
resource/: conf_utf16.xml  conf_utf8.xml
scripts/: beauty.sh
syslog/: CMakeLists.txt
syslog/header/: logger.h
syslog/source/: logger.cpp
tests/: CMakeLists.txt
tests/header/: CPPtester.h  docMacro.h
tests/inc/: CPPtester.h  docMacro.h
tests/project/: tests.vcxproj  tests.vcxproj.filters  tests_12.vcxproj  tests_12.vcxproj.filters
tests/project/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/project/qt/: tests.pro
tests/source/: mainApp.cpp  testappmanager.cpp  testbmpImage.cpp  testminiXml.cpp  testn2connection.cpp  testn2draw.cpp  testn2imagemanager.cpp  testn2logger.cpp  testn2objmanager.cpp  testviewglue.cpp
tests/src/: mainApp.cpp  testappmanager.cpp  testbmpImage.cpp  testminiXml.cpp  testn2connection.cpp  testn2draw.cpp  testn2imagemanager.cpp  testn2objmanager.cpp  testviewglue.cpp
